// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  color: #67728A;
  font-weight: 400;
  margin-left: calc(1rem * (4 / 16));
}

.emotion-1 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  margin-top: 0.5rem;
  margin-bottom: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<form
  class="Form"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--default"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="emotion-1"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
          <span
            class="emotion-0"
          >
            (
            required
            )
          </span>
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  color: #67728A;
  font-weight: 400;
  margin-left: calc(1rem * (4 / 16));
}

.emotion-1 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  margin-top: 0.5rem;
  margin-bottom: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<form
  class="Form my-extra-class"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--default"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="emotion-1"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
          <span
            class="emotion-0"
          >
            (
            required
            )
          </span>
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders the component with condensed spacing 1`] = `
.emotion-0 {
  color: #67728A;
  font-weight: 400;
  margin-left: calc(1rem * (4 / 16));
}

.emotion-1 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  margin-top: 0.5rem;
  margin-bottom: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<form
  class="Form my-extra-class"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--condensed"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="emotion-1"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
          <span
            class="emotion-0"
          >
            (
            required
            )
          </span>
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;
